[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everseed"
version = "0.0.1"
authors = [
  { name="Vivek Revankar", email="vivek@master-hax.com" },
]
description = "a tool for seeding lots of torrents forever"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"